--- a/.github/action/discord-notify/action.yml
+++ b/.github/action/discord-notify/action.yml
@@ -51,7 +51,9 @@ runs:
 
         if [[ "$EVENT_NAME" == "workflow_dispatch" ]]; then
           COMMITS=$(git log --oneline -5 --pretty=format:"• [%h](https://github.com/$REPO/commit/%H) %s" 2>/dev/null || echo "• Unable to fetch commits")
-          DESCRIPTION="**$WORKFLOW_NAME:** Manually triggered workflow [#$RUN_ID]($RUN_URL) on branch **$BRANCH** by $ACTOR has $STATUS_TEXT  **Recent Commits:** $COMMITS"
+          DESCRIPTION="**$WORKFLOW_NAME:** Manually triggered workflow [#$RUN_ID]($RUN_URL) on branch **$BRANCH** by $ACTOR has $STATUS_TEXT \
+           **Recent Commits:** \
+           $COMMITS"
 
         elif [[ "$EVENT_NAME" == "push" ]]; then
           COMMIT_MSG=$(git log -1 --pretty=%B || echo "")
